--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,8 @@ services:
     environment:
       PWA_UPSTREAM: pwa:3000
       SERVER_NAME: ${SERVER_NAME:-localhost, caddy:80}
-      MERCURE_PUBLISHER_JWT_KEY: ${MERCURE_PUBLISHER_JWT_KEY:-!ChangeMe!}
-      MERCURE_SUBSCRIBER_JWT_KEY: ${MERCURE_SUBSCRIBER_JWT_KEY:-!ChangeMe!}
+      MERCURE_PUBLISHER_JWT_KEY: ${MERCURE_PUBLISHER_JWT_KEY:-8igS3cr3t}
+      MERCURE_SUBSCRIBER_JWT_KEY: ${MERCURE_SUBSCRIBER_JWT_KEY:-8igS3cr3t}
     restart: unless-stopped
     volumes:
       - php_socket:/var/run/php
@@ -59,7 +59,7 @@ services:
     image: postgres:13-alpine
     environment:
       - POSTGRES_DB=api
-      - POSTGRES_PASSWORD=!ChangeMe!
+      - POSTGRES_PASSWORD=8igS3cr3t
       - POSTGRES_USER=api-platform
     volumes:
       - db_data:/var/lib/postgresql/data:rw
