--- a/api/.env
+++ b/api/.env
@@ -19,7 +19,7 @@ TRUSTED_HOSTS=^localhost|caddy$
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=!ChangeMe!
+APP_SECRET=8igS3cr3t
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -28,7 +28,7 @@ APP_SECRET=!ChangeMe!
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://api-platform:!ChangeMe!@database:5432/api?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://api-platform:8igS3cr3t@database:5432/api?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
@@ -42,5 +42,5 @@ MERCURE_URL=http://caddy/.well-known/mercure
 # The public URL of the Mercure hub, used by the browser to connect
 MERCURE_PUBLIC_URL=http://caddy/.well-known/mercure
 # The secret used to sign the JWTs
-MERCURE_JWT_SECRET="!ChangeMe!"
+MERCURE_JWT_SECRET="8igS3cr3t"
 ###< symfony/mercure-bundle ###
